--- a/style/padrao.css
+++ b/style/padrao.css
@@ -1,3 +1,6 @@
-.pagina-login {
-    background-color: antiquewhite;
+.root {
+    --fundoLogin : rgb(10, 10, 10);
+    --corfundoLogin :  rgb(10, 10, 10);
+    --btnSistema : rgb(34, 243, 226);
+    --corFonteBotao : black;
 }
