--- a/style/login.css
+++ b/style/login.css
@@ -70,3 +70,10 @@
     color: rgb(0, 0, 0);
 
 }
+.cadastro{
+    background-color: aquamarine;
+}
+.form-cadastro{
+    height: 100vh;
+    width: 70vw;
+}
