--- a/style/login.css
+++ b/style/login.css
@@ -77,3 +77,10 @@
     height: 100vh;
     width: 70vw;
 }
+.mesma-linha{
+    display: flex;
+    margin-left: 250px;
+}
+campo-input-grande{
+    width: 100%;
+}
